--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -180,3 +180,75 @@ video{
     }
   }
 }
+
+.card-img{
+  height: 300px;
+  width: 100%;
+  background-color: red;
+  z-index:5;
+  border-radius: 10px;
+}
+.card-text{
+  width: 90%;
+  max-height: 250px;
+  height: 100%;
+  background-color: #fafafa;
+  z-index: 10;
+margin-top: 250px !important;
+position: relative;
+border-radius: 15px;
+margin: 0 auto;
+box-shadow: 0 0.46875rem 2.1875rem rgba(4,9,20,.03), 0 0.9375rem 1.40625rem rgba(4,9,20,.03), 0 0.25rem 0.53125rem rgba(4,9,20,.05), 0 0.125rem 0.1875rem rgba(4,9,20,.03);
+h5{
+  font-weight: bold;
+}
+h6{
+  font-weight: bold;
+}
+
+.user-content-text {
+  font-size: 14px;
+  height: 30px;
+  line-height: 30px;
+  text-align: left;
+  font-weight: 600;
+  margin-left: 20px;
+}
+.icon-check {
+  font-size: 20px;
+}
+}
+
+
+.zoom-effect-container {
+  float: left;
+  // position: relative;
+  height: 300px;
+  width: 100%;
+  margin: 0 auto;
+  overflow: hidden;
+  z-index:5;
+border-radius: 15px;
+box-shadow: 0 0.46875rem 2.1875rem rgba(4,9,20,.03), 0 0.9375rem 1.40625rem rgba(4,9,20,.03), 0 0.25rem 0.53125rem rgba(4,9,20,.05), 0 0.125rem 0.1875rem rgba(4,9,20,.03);
+
+}
+
+.image-card {
+// position: absolute;k
+top: 0;
+left: 0;
+border-radius: 15px;
+
+}
+
+.image-card img {
+-webkit-transition: 0.4s ease;
+transition: 0.4s ease;
+border-radius: 15px;
+
+}
+
+.zoom-effect-container:hover .image-card img {
+-webkit-transform: scale(1.08);
+transform: scale(1.08);
+}
