--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -181,43 +181,43 @@ video{
   }
 }
 
-.card-img{
-  height: 300px;
-  width: 100%;
-  background-color: red;
-  z-index:5;
-  border-radius: 10px;
-}
-.card-text{
-  width: 90%;
-  max-height: 250px;
-  height: 100%;
-  background-color: #fafafa;
-  z-index: 10;
-margin-top: 250px !important;
-position: relative;
-border-radius: 15px;
-margin: 0 auto;
-box-shadow: 0 0.46875rem 2.1875rem rgba(4,9,20,.03), 0 0.9375rem 1.40625rem rgba(4,9,20,.03), 0 0.25rem 0.53125rem rgba(4,9,20,.05), 0 0.125rem 0.1875rem rgba(4,9,20,.03);
-h5{
-  font-weight: bold;
-}
-h6{
-  font-weight: bold;
-}
+// .card-img{
+//   height: 300px;
+//   width: 100%;
+//   background-color: red;
+//   z-index:5;
+//   border-radius: 10px;
+// }
+// .card-text{
+//   width: 90%;
+//   max-height: 250px;
+//   height: 100%;
+//   background-color: #fafafa;
+//   z-index: 10;
+// margin-top: 250px !important;
+// position: relative;
+// border-radius: 15px;
+// margin: 0 auto;
+// box-shadow: 0 0.46875rem 2.1875rem rgba(4,9,20,.03), 0 0.9375rem 1.40625rem rgba(4,9,20,.03), 0 0.25rem 0.53125rem rgba(4,9,20,.05), 0 0.125rem 0.1875rem rgba(4,9,20,.03);
+// h5{
+//   font-weight: bold;
+// }
+// h6{
+//   font-weight: bold;
+// }
 
-.user-content-text {
-  font-size: 14px;
-  height: 30px;
-  line-height: 30px;
-  text-align: left;
-  font-weight: 600;
-  margin-left: 20px;
-}
-.icon-check {
-  font-size: 20px;
-}
-}
+// .user-content-text {
+//   font-size: 14px;
+//   height: 30px;
+//   line-height: 30px;
+//   text-align: left;
+//   font-weight: 600;
+//   margin-left: 20px;
+// }
+// .icon-check {
+//   font-size: 20px;
+// }
+// }
 
 
 .zoom-effect-container {
@@ -252,3 +252,27 @@ border-radius: 15px;
 -webkit-transform: scale(1.08);
 transform: scale(1.08);
 }
+
+
+
+/////Card//////
+
+.card-footer {
+  padding: 0.75rem 1.25rem;
+  border-top: 1px solid #f7ca18;
+  background-color: #f7ca18;
+  width: 100%;
+  .text-muted {
+    color: #fff !important;
+    font-size: 13px;
+  font-weight: bold;
+  }
+}
+
+.border-warning{
+  border-top: 1px solid #f7ca18 !important;
+}
+.card:hover{
+  box-shadow: 0 12px 15px 0 rgba(204, 204, 204,0.24),0 17px 50px 0 rgba(204, 204, 204,0.19) !important;
+}
+/////Card//////
